# steamslot

./: .gitignore  README.md
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_indexes_and_wallet_check.py  0003_sessions.py
backend/app/: config.py  db.py  main.py  rate_limit.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: __init__.py  auth.py  packs.py  wallet.py
backend/app/catalog/: steam_client.py
backend/app/models/: __init__.py  catalog.py  enums.py  fulfillment.py  ledger.py  packs.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  packs.py  wallet.py
backend/app/security/: __init__.py  password.py  tokens.py
backend/app/services/: auth_service.py  ledger_service.py  pack_service.py  rng_engine.py
backend/data/: catalog_seed.json
backend/docker/: init-test-db.sql
backend/scripts/: refresh_catalog_fixture.py  seed_catalog.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_db_constraints.py  test_db_transaction.py  test_ledger_service.py  test_pack_service.py  test_packs_api.py  test_rate_limit_auth.py  test_rate_limit_core.py  test_rate_limit_packs.py  test_refresh_catalog_fixture.py  test_rng_engine.py  test_schema.py  test_security.py  test_seed_catalog.py  test_steam_client.py
docs/: design.md
docs/superpowers/plans/: 2026-07-16-backend-foundation.md  2026-07-16-http-auth-layer.md  2026-07-17-rate-limiting.md
